# rstoolbox

./: Cargo.toml  README.md  Taskfile.yml  config.json  makefile
src/: get.rs  lib.rs
src/assets/: config.rs  download.rs  extract.rs  mod.rs  service.rs  task.rs
src/cli/: handle.rs  log.rs  mod.rs
src/command/: binary.rs  mod.rs
src/database/: mod.rs
src/embed/: git.rs  mod.rs
src/error/: service.rs
src/geometry/: common.rs  mod.rs  region.rs
src/handle/: attempt.rs  delay.rs  io.rs  mod.rs  ops.rs
src/path/: file.rs  like.rs  mod.rs  path.rs  storage.rs  valid.rs
src/paths/: file.rs  mod.rs  path.rs
src/service/: error.rs  mod.rs  path.rs  remote_file.rs
src/template/: cli.rs  config.rs  engine.rs  mod.rs  service.rs  tera.rs
src/testing/: case.rs  mod.rs
test/simple/: main.tera
