[package]
name = "rstoolbox"
version = "0.1.0"
authors = ["István Bozsó <bozso.istvan@csfk.mta.hu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rstoolbox"
path = "src/bin/main.rs"

[lib]
name = "toolbox"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.4"
thiserror = "1.0"
structopt = "0.3"
tera = "1.7"
routerify = "2.0"
hyper = "0.14"
